# sdlGamedev

./: CMakeLists.txt  README.md
chapter1/: CMakeLists.txt
chapter1/src/: main.cpp
chapter2/: CMakeLists.txt
chapter2/src/: main.cpp
chapter3/: CMakeLists.txt
cmake/: FindSDL2.cmake
include/: TextureManager.cpp  TextureManager.hpp  enemy.cpp  enemy.hpp  game.cpp  game.hpp  gameobject.cpp  gameobject.hpp  loadParam.hpp  player.cpp  player.hpp  res_path.hpp  sdlgameobj.cpp  sdlgameobj.hpp
